--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,14 @@ spring:
         max-idle: 8
         min-idle: 0
         max-wait: -1
+  mail:
+    host: smtp.mxhichina.com
+    username: system@jiafly.com
+    password: System966779
+    protocol: smtp
+    default-encoding: UTF-8
+#  resources:
+#    static-locations: classpath:/resources/, classpath:/static/ ,classpath:/templates/
 
   jackson:
     time-zone: GMT+8
