--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ logs/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+!/src/main/resources/application-local.yml
 
 ### STS ###
 .apt_generated
